--- a/templates/profile.html
+++ b/templates/profile.html
@@ -68,7 +68,7 @@
                         <div class="profile-info">
                             <h3>{{ user.name }}</h3>
                             <h4>{{ user.email }}</h4>
-                            <h4>Total Balance: ${{ balance }}</h4>
+                            <h4>Total Balance: Rs {{ balance }}</h4>
                         </div>
                     </div>
                 </div>
